--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -38,7 +38,7 @@ jobs:
         run: ./scripts/test-script.sh
         env:
           VARIANT: v4
-          SERVICE_NAME: gateway-service
+          SERVICE_NAME: gateway_service
           PORT_NUMBER: 8080
 
       - uses: education/autograding@v1
