--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,8 +17,6 @@ jobs:
 
       - uses: docker/setup-buildx-action@v2
 
-      # TODO build and run unit tests
-
       - name: Build images
         timeout-minutes: 10
         run: docker compose build
@@ -31,7 +29,36 @@ jobs:
         env:
           WAIT_PORTS: 8080,8070,8060,8050
 
-      # TODO setup variant, service and port
+      - name: Connect to VM
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: whoami
+
+      - name: Copy to VM
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: "postgres,src,Dockerfile,docker-compose.yml"
+          target: /home/${{ secrets.SSH_USER }}/library-system
+
+      - name: Run on VM
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd /home/${{ secrets.SSH_USER }}/library-system
+            sudo -S docker compose down
+            sudo -S docker compose up --build -d
 
       - name: Run API Tests
         timeout-minutes: 5
@@ -47,6 +74,7 @@ jobs:
 
       - name: Github auto grader mark
         uses: Romanow/google-sheet-autograder-marker@v1.0
+        continue-on-error: true
         with:
           google_token: ${{secrets.GOOGLE_API_KEY}}
           sheet_id: "1xkgjUX6Qmk7rdJG-QPOToav-HWWtthJjnShIKnw3oIY"
